--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
 
+# NOTE! Expected Godot Project to *Share* this folder's root
+
 # Godot-specific ignores
 .import/
 export.cfg
-export_presets.cfg
+# export_presets.cfg # Removed because there is no sesntivie information in this file
+
+# Imported translations (automatically generated from CSV files)
+editor/*.translation
 
 # Mono-specific ignores
 .mono/
 data_*/
+
+# Project-specific ignores
+.export/
